book/tests/snapshots/snapshot__run_display_reference_prql@variables-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/examples/variables-1.prql
---
prql dialect:generic

from employees
group [emp_no] (
  aggregate [emp_salary = (average salary)]
)
join titles [emp_no]
group [title] (
  aggregate [avg_salary = (average emp_salary)]
)
select salary_k = avg_salary / 1000
take 10
derive salary = salary_k * 1000


