book/tests/snapshots/snapshot__run_display_reference_prql@window-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/window-0.prql
---
prql dialect:generic

from employees
group employee_id (
  sort month
  window rolling:12 (
  derive [trail_12_m_comp = (sum paycheck)]
)
)


