book/tests/snapshots/snapshot__run_display_reference_prql@window-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/window-3.prql
---
from employees
group department (
  sort age
  derive rnk = rank
)



