book/tests/snapshots/snapshot__run_reference_prql@aggregate-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/aggregate-2.prql
---
SELECT
  *,
  AVG(salary) OVER () AS avg_sal
FROM
  employees
