book/tests/snapshots/snapshot__run_reference_prql@coalesce-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/coalesce-0.prql
---
SELECT
  orders.*,
  COALESCE(amount, 0)
FROM
  orders
