book/tests/snapshots/snapshot__run_reference_prql@dbt-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/integrations/dbt-1.prql
---
Failed to compile `{% prql %}
from {{ source('salesforce', 'in_process') }}
derive expected_sales = probability * value
join {{ ref('team', 'team_sales') }} [name]
group name (
  aggregate (expected_sales)
)
{% endprql %}
`;  --> 1:1
  |
1 | {% prql %}␊
  | ^---
  |
  = expected query
