book/tests/snapshots/snapshot__run_reference_prql@distinct-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/distinct-2.prql
---
WITH table_1 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (
      PARTITION BY department
      ORDER BY
        age
    ) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1
WHERE
  _expr_0 <= 1
